# carbon-dna-ledger

./: .env.example  .gitignore  .replit  AI_SETUP.md  ANALYTICS_FIX.md  AUDIT_SNAPSHOT_FIXES.md  BACKEND_DEPLOYMENT.md  BACK_TO_SEARCH_FIX.md  CARBON_REWARDS_DATA_MATCHING_FIX.md  CARBON_REWARDS_LARGE_DATASET_FIX.md  CLIMATE_TRACE_BUG_REPORT.md  CLIMATE_TRACE_INTEGRATION.md  COMPLIANCE_FRAMEWORKS_STATUS.md  COMPLIANCE_GAPS_FIX.md  DATABASE_SCHEMA_ANALYSIS.md  DEPLOYMENT_GUIDE.md  DEPLOY_NOW.md  Dockerfile  EMISSIONS_CALCULATOR.md  ENHANCED_COMPLIANCE_ROADMAP.md  EVENT_DETAILS_SELECTION_FIX.md  EVENT_EXPLORER_BUTTON_APPROACH.md  EVENT_EXPLORER_FINAL_FIX.md  EVENT_EXPLORER_SELECTION_FIX.md  FACTOR_BREAKDOWN_EXPLANATION.md  FREE_HOSTING_GUIDE.md  GET_API_KEYS.md  INDENTATION_ERROR_FIX.md  PLOTLY_DEPRECATION_FIX.md  PLOTLY_WARNINGS_SUPPRESSED.md  Procfile  QUICK_FIX_NGROK.md  README.md  RECORD_LIMIT_FIX.md  ROW_HASH_FIX.md  SERVER_RESTART_SUCCESS.md  STREAMLIT_CLOUD_FIXES.md  TAMPER_SIMULATION_EXPLORER_FIX.md  TAMPER_SIMULATION_FIX.md  pyproject.toml  (+6 more)
.streamlit/: config.toml
app/: api_audit_simple.py  api_enhanced_audit.py  api_enhanced_roadmap.py  db.py  main.py  models.py  models_enhanced_audit.py  schemas.py  seed.py  seed_compliance.py
app/services/: advanced_compliance_engine.py  ai_classifier.py  (+23 more)
attached_assets/: Pasted-You-are-building-a-FULL-demo-ready-prototype-called-Carbon-DNA-Ledger-GOAL-Create-a-Replit-1757969324777_1757969324779.txt
infra/: migrate.sql  migrate_enhanced_audit.sql  seed_compliance_rules.json  seed_demo.csv  seed_factors.json
ui/: app.py
(+15 files in other folders)
